force-app/main/default/objects/Guest_Room__c/Guest_Room__c.object-meta.xml
<CustomObject>
    <label>Guest Room</label>
    <nameField>
        <displayFormat>GRN-{00}</displayFormat>
        <label>Guest Rooms Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guest Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>