force-app/main/default/objects/Guest_Room__c/fields/REVA_Guest_House_Booking__c.field-meta.xml
<CustomField>
    <fullName>REVA_Guest_House_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REVA Guest House Booking</label>
    <referenceTo>Reva_Guest_House_Booking__c</referenceTo>
    <relationshipLabel>Guest Rooms</relationshipLabel>
    <relationshipName>Guest_Rooms</relationshipName>
    <type>Lookup</type>
</CustomField>