force-app/main/default/objects/Guest_Room__c/fields/Sharing_Type__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Type__c</fullName>
    <label>Sharing Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>